# modmail

./: .gitignore  pyproject.toml
src/: __init__.py  __main__.py
src/data/: 0001-init.sql
src/internal/: bot.py
src/utils/: __init__.py  config.py  database.py
src/utils/models/: __init__.py  thread.py  user.py
